linter problem resolved in controller